--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,10 @@
-test/mymessage.go
-generator
 .idea
-parse/parser.go
-parse/y.output
-parser
-goddsgen
-publisher
-subscriber
-NavigationDataAll.idl
-eb/*
-example/constants.go
-example/enums.go
-example/mymodule_mymessage.go
-example/mymodule_myerror.go
-example/mymodule_myunion.go
-example/*.c
-example/*.h
+/example/src/
+/verification/src/
+/goddsgen
+/examplepub
+/examplesub
+/verificationpub
+/verificationsub
+
+
